--- a/public/css/index.css
+++ b/public/css/index.css
@@ -580,30 +580,6 @@ video {
 .relative {
 	position: relative;
 }
-.top-\[1\.1vw\] {
-	top: 1.1vw;
-}
-.left-\[1vw\] {
-	left: 1vw;
-}
-.top-\[0\.8vw\] {
-	top: 0.8vw;
-}
-.left-\[0\.8vw\] {
-	left: 0.8vw;
-}
-.top-\[0\.7vw\] {
-	top: 0.7vw;
-}
-.left-\[0\.9vw\] {
-	left: 0.9vw;
-}
-.top-\[10px\] {
-	top: 10px;
-}
-.top-\[15px\] {
-	top: 15px;
-}
 .top-\[18px\] {
 	top: 18px;
 }
@@ -637,62 +613,53 @@ video {
 .ml-\[4vw\] {
 	margin-left: 4vw;
 }
-.mt-\[30vw\] {
-	margin-top: 30vw;
-}
-.ml-\[0\.4vw\] {
-	margin-left: 0.4vw;
-}
-.mr-\[0\.4vw\] {
-	margin-right: 0.4vw;
-}
-.mb-\[1vw\] {
-	margin-bottom: 1vw;
-}
-.mb-\[0\.5vw\] {
-	margin-bottom: 0.5vw;
-}
-.mb-\[0\.4vw\] {
-	margin-bottom: 0.4vw;
-}
-.mb-\[0\.2vw\] {
-	margin-bottom: 0.2vw;
-}
-.mt-\[200px\] {
-	margin-top: 200px;
-}
-.mt-\[500px\] {
-	margin-top: 500px;
-}
-.mt-\[700px\] {
-	margin-top: 700px;
-}
-.mt-\[600px\] {
-	margin-top: 600px;
-}
-.mt-\[480px\] {
-	margin-top: 480px;
-}
-.mt-\[580px\] {
-	margin-top: 580px;
-}
-.ml-1 {
-	margin-left: 0.25rem;
+.mt-\[550px\] {
+	margin-top: 550px;
 }
 .ml-2 {
 	margin-left: 0.5rem;
 }
+.mt-1 {
+	margin-top: 0.25rem;
+}
+.mt-2 {
+	margin-top: 0.5rem;
+}
 .mb-2 {
 	margin-bottom: 0.5rem;
-}
-.mb-1 {
-	margin-bottom: 0.25rem;
 }
 .mr-1 {
 	margin-right: 0.25rem;
 }
-.mt-\[610px\] {
-	margin-top: 610px;
+.mb-1 {
+	margin-bottom: 0.25rem;
+}
+.ml-1 {
+	margin-left: 0.25rem;
+}
+.ml-3 {
+	margin-left: 0.75rem;
+}
+.ml-40 {
+	margin-left: 10rem;
+}
+.mt-\[600px\] {
+	margin-top: 600px;
+}
+.ml-4 {
+	margin-left: 1rem;
+}
+.ml-10 {
+	margin-left: 2.5rem;
+}
+.ml-12 {
+	margin-left: 3rem;
+}
+.ml-14 {
+	margin-left: 3.5rem;
+}
+.ml-16 {
+	margin-left: 4rem;
 }
 .flex {
 	display: flex;
@@ -714,30 +681,6 @@ video {
 }
 .h-\[8vh\] {
 	height: 8vh;
-}
-.h-\[98vh\] {
-	height: 98vh;
-}
-.h-\[0\.6vw\] {
-	height: 0.6vw;
-}
-.h-\[0\.4vw\] {
-	height: 0.4vw;
-}
-.h-96 {
-	height: 24rem;
-}
-.h-\[5px\] {
-	height: 5px;
-}
-.h-\[10px\] {
-	height: 10px;
-}
-.h-\[15px\] {
-	height: 15px;
-}
-.h-\[13px\] {
-	height: 13px;
 }
 .h-\[12px\] {
 	height: 12px;
@@ -766,68 +709,11 @@ video {
 .w-\[25vw\] {
 	width: 25vw;
 }
-.w-\[3\.8vw\] {
-	width: 3.8vw;
-}
-.w-\[1\.5vw\] {
-	width: 1.5vw;
-}
-.w-\[0\.6vw\] {
-	width: 0.6vw;
-}
-.w-\[0\.4vw\] {
-	width: 0.4vw;
-}
-.w-\[18vw\] {
-	width: 18vw;
-}
-.w-\[58vw\] {
-	width: 58vw;
-}
-.w-\[1\.0vw\] {
-	width: 1.0vw;
-}
-.w-\[1\.2vw\] {
-	width: 1.2vw;
-}
-.w-\[16vw\] {
-	width: 16vw;
-}
-.w-\[14vw\] {
-	width: 14vw;
-}
-.w-\[13vw\] {
-	width: 13vw;
-}
-.w-11 {
-	width: 2.75rem;
-}
 .w-16 {
 	width: 4rem;
 }
-.w-3 {
-	width: 0.75rem;
-}
-.w-10 {
-	width: 2.5rem;
-}
-.w-6 {
-	width: 1.5rem;
-}
 .w-7 {
 	width: 1.75rem;
-}
-.w-\[5px\] {
-	width: 5px;
-}
-.w-\[10px\] {
-	width: 10px;
-}
-.w-\[15px\] {
-	width: 15px;
-}
-.w-\[13px\] {
-	width: 13px;
 }
 .w-\[12px\] {
 	width: 12px;
@@ -835,38 +721,59 @@ video {
 .w-\[8px\] {
 	width: 8px;
 }
-.w-64 {
-	width: 16rem;
+.w-80 {
+	width: 20rem;
 }
-.w-48 {
-	width: 12rem;
-}
-.w-52 {
-	width: 13rem;
-}
-.w-\[200px\] {
-	width: 200px;
-}
-.w-\[220px\] {
-	width: 220px;
+.w-\[1200px\] {
+	width: 1200px;
 }
 .w-\[208px\] {
 	width: 208px;
 }
-.min-w-\[208px\] {
-	min-width: 208px;
+.w-\[48px\] {
+	width: 48px;
+}
+.w-\[1000px\] {
+	width: 1000px;
+}
+.w-\[20px\] {
+	width: 20px;
+}
+.w-8 {
+	width: 2rem;
+}
+.w-10 {
+	width: 2.5rem;
+}
+.w-12 {
+	width: 3rem;
 }
 .min-w-\[64px\] {
 	min-width: 64px;
 }
+.min-w-\[208px\] {
+	min-width: 208px;
+}
+.max-w-\[200px\] {
+	max-width: 200px;
+}
 .cursor-pointer {
 	cursor: pointer;
+}
+.flex-row-reverse {
+	flex-direction: row-reverse;
 }
 .flex-col {
 	flex-direction: column;
 }
+.items-end {
+	align-items: flex-end;
+}
 .items-center {
 	align-items: center;
+}
+.justify-end {
+	justify-content: flex-end;
 }
 .justify-center {
 	justify-content: center;
@@ -877,6 +784,9 @@ video {
 .justify-around {
 	justify-content: space-around;
 }
+.overflow-hidden {
+	overflow: hidden;
+}
 .rounded-full {
 	border-radius: 9999px;
 }
@@ -886,32 +796,38 @@ video {
 .rounded-lg {
 	border-radius: 0.5rem;
 }
-.rounded-\[100vw\] {
-	border-radius: 100vw;
-}
-.rounded-2xl {
-	border-radius: 1rem;
-}
-.rounded-xl {
-	border-radius: 0.75rem;
+.rounded-\[300px\] {
+	border-radius: 300px;
 }
 .rounded-3xl {
 	border-radius: 1.5rem;
 }
-.rounded-sm {
-	border-radius: 0.125rem;
+.rounded-md {
+	border-radius: 0.375rem;
 }
-.rounded-\[300px\] {
-	border-radius: 300px;
+.rounded-\[18px\] {
+	border-radius: 18px;
+}
+.rounded-xl {
+	border-radius: 0.75rem;
+}
+.rounded-2xl {
+	border-radius: 1rem;
 }
 .border {
 	border-width: 1px;
+}
+.border-2 {
+	border-width: 2px;
 }
 .border-b {
 	border-bottom-width: 1px;
 }
 .border-r {
 	border-right-width: 1px;
+}
+.border-t {
+	border-top-width: 1px;
 }
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
@@ -925,9 +841,9 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.bg-gray-100 {
+.bg-purple-200 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
 }
 .bg-purple-300 {
 	--tw-bg-opacity: 1;
@@ -941,66 +857,55 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
 }
+.bg-gray-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.bg-gray-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
 .bg-purple-100 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(237, 233, 254, var(--tw-bg-opacity));
 }
-.bg-purple-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
+.bg-gradient-to-b {
+	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+.bg-gradient-to-l {
+	background-image: linear-gradient(to left, var(--tw-gradient-stops));
+}
+.bg-gradient-to-bl {
+	background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
+}
+.from-purple-200 {
+	--tw-gradient-from: #ddd6fe;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(221, 214, 254, 0));
+}
+.from-purple-300 {
+	--tw-gradient-from: #c4b5fd;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(196, 181, 253, 0));
+}
+.to-purple-100 {
+	--tw-gradient-to: #ede9fe;
+}
+.to-purple-200 {
+	--tw-gradient-to: #ddd6fe;
 }
 .p-\[1vw\] {
 	padding: 1vw;
 }
-.p-\[0\.5vw\] {
-	padding: 0.5vw;
+.p-4 {
+	padding: 1rem;
 }
 .p-1 {
 	padding: 0.25rem;
 }
-.p-5 {
-	padding: 1.25rem;
-}
-.p-4 {
-	padding: 1rem;
-}
 .p-2 {
 	padding: 0.5rem;
 }
-.p-\[1px\] {
-	padding: 1px;
-}
-.p-\[10px\] {
-	padding: 10px;
-}
-.p-\[5px\] {
-	padding: 5px;
-}
-.p-\[4px\] {
-	padding: 4px;
-}
-.p-\[6px\] {
-	padding: 6px;
-}
-.p-\[6\.5px\] {
-	padding: 6.5px;
-}
 .p-3 {
 	padding: 0.75rem;
-}
-.p-\[2px\] {
-	padding: 2px;
-}
-.p-\[3px\] {
-	padding: 3px;
-}
-.px-9 {
-	padding-left: 2.25rem;
-	padding-right: 2.25rem;
-}
-.px-40 {
-	padding-left: 10rem;
-	padding-right: 10rem;
 }
 .pt-\[2vw\] {
 	padding-top: 2vw;
@@ -1011,92 +916,8 @@ video {
 .pb-\[2vw\] {
 	padding-bottom: 2vw;
 }
-.pt-\[0\.4vw\] {
-	padding-top: 0.4vw;
-}
-.pl-\[0\.2vw\] {
-	padding-left: 0.2vw;
-}
-.pr-\[0\.2vw\] {
-	padding-right: 0.2vw;
-}
-.pt-\[0\.3vw\] {
-	padding-top: 0.3vw;
-}
-.pb-\[0\.3vw\] {
-	padding-bottom: 0.3vw;
-}
-.pl-\[0\.4vw\] {
-	padding-left: 0.4vw;
-}
-.pr-\[0\.4vw\] {
-	padding-right: 0.4vw;
-}
-.pt-1 {
-	padding-top: 0.25rem;
-}
-.pt-3 {
-	padding-top: 0.75rem;
-}
-.pl-1 {
-	padding-left: 0.25rem;
-}
-.pr-1 {
-	padding-right: 0.25rem;
-}
-.pt-2 {
-	padding-top: 0.5rem;
-}
-.pb-2 {
-	padding-bottom: 0.5rem;
-}
-.pb-1 {
-	padding-bottom: 0.25rem;
-}
-.pl-\[8px\] {
-	padding-left: 8px;
-}
-.pr-\[8px\] {
-	padding-right: 8px;
-}
-.pt-\[10px\] {
-	padding-top: 10px;
-}
-.pb-\[10px\] {
-	padding-bottom: 10px;
-}
-.pl-\[6px\] {
-	padding-left: 6px;
-}
-.pr-\[6px\] {
-	padding-right: 6px;
-}
-.pt-\[7px\] {
-	padding-top: 7px;
-}
-.pb-\[7px\] {
-	padding-bottom: 7px;
-}
-.pl-2 {
-	padding-left: 0.5rem;
-}
-.pr-2 {
-	padding-right: 0.5rem;
-}
 .pt-4 {
 	padding-top: 1rem;
-}
-.pl-\[4px\] {
-	padding-left: 4px;
-}
-.pr-\[4px\] {
-	padding-right: 4px;
-}
-.pt-\[5px\] {
-	padding-top: 5px;
-}
-.pb-\[5px\] {
-	padding-bottom: 5px;
 }
 .pl-\[5px\] {
 	padding-left: 5px;
@@ -1110,23 +931,53 @@ video {
 .pb-\[6px\] {
 	padding-bottom: 6px;
 }
-.font-neob {
-	font-family: NeoB;
+.pt-1 {
+	padding-top: 0.25rem;
 }
-.font-neosb {
-	font-family: NeoSB;
+.pl-2 {
+	padding-left: 0.5rem;
 }
-.font-neoh {
-	font-family: NeoH;
+.pr-2 {
+	padding-right: 0.5rem;
 }
-.font-neol {
-	font-family: NeoL;
+.pb-1 {
+	padding-bottom: 0.25rem;
+}
+.pl-1 {
+	padding-left: 0.25rem;
+}
+.pt-3 {
+	padding-top: 0.75rem;
+}
+.pr-1 {
+	padding-right: 0.25rem;
+}
+.pt-\[10px\] {
+	padding-top: 10px;
+}
+.pt-\[8px\] {
+	padding-top: 8px;
+}
+.pb-\[8px\] {
+	padding-bottom: 8px;
+}
+.pb-2 {
+	padding-bottom: 0.5rem;
+}
+.pt-2 {
+	padding-top: 0.5rem;
 }
 .font-neoeb {
 	font-family: NeoEB;
 }
 .font-neom {
 	font-family: NeoM;
+}
+.font-neosb {
+	font-family: NeoSB;
+}
+.font-neob {
+	font-family: NeoB;
 }
 .font-neor {
 	font-family: NeoR;
@@ -1143,40 +994,6 @@ video {
 .text-\[5vw\] {
 	font-size: 5vw;
 }
-.text-\[0\.8vw\] {
-	font-size: 0.8vw;
-}
-.text-\[1vw\] {
-	font-size: 1vw;
-}
-.text-\[1\.5vw\] {
-	font-size: 1.5vw;
-}
-.text-\[1\.3vw\] {
-	font-size: 1.3vw;
-}
-.text-\[1\.2vw\] {
-	font-size: 1.2vw;
-}
-.text-\[1\.0vw\] {
-	font-size: 1.0vw;
-}
-.text-\[0\.7vw\] {
-	font-size: 0.7vw;
-}
-.text-\[0\.78vw\] {
-	font-size: 0.78vw;
-}
-.text-\[0\.6vw\] {
-	font-size: 0.6vw;
-}
-.text-\[0\.9vw\] {
-	font-size: 0.9vw;
-}
-.text-sm {
-	font-size: 0.875rem;
-	line-height: 1.25rem;
-}
 .text-lg {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
@@ -1184,6 +1001,10 @@ video {
 .text-xl {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
+}
+.text-sm {
+	font-size: 0.875rem;
+	line-height: 1.25rem;
 }
 .text-2xl {
 	font-size: 1.5rem;
@@ -1193,55 +1014,57 @@ video {
 	font-size: 0.75rem;
 	line-height: 1rem;
 }
+.text-\[15px\] {
+	font-size: 15px;
+}
+.text-\[12px\] {
+	font-size: 12px;
+}
+.text-\[10px\] {
+	font-size: 10px;
+}
+.text-\[20px\] {
+	font-size: 20px;
+}
+.text-\[18px\] {
+	font-size: 18px;
+}
+.text-base {
+	font-size: 1rem;
+	line-height: 1.5rem;
+}
 .font-bold {
 	font-weight: 700;
-}
-.text-\[black\] {
-	--tw-text-opacity: 1;
-	color: rgba(0, 0, 0, var(--tw-text-opacity));
-}
-.text-\[\#a7a7aa\] {
-	--tw-text-opacity: 1;
-	color: rgba(167, 167, 170, var(--tw-text-opacity));
-}
-.text-gray-300 {
-	--tw-text-opacity: 1;
-	color: rgba(209, 213, 219, var(--tw-text-opacity));
-}
-.text-gray-500 {
-	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
-.text-gray-600 {
-	--tw-text-opacity: 1;
-	color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-.text-gray-400 {
-	--tw-text-opacity: 1;
-	color: rgba(156, 163, 175, var(--tw-text-opacity));
-}
-.text-purple-900 {
-	--tw-text-opacity: 1;
-	color: rgba(76, 29, 149, var(--tw-text-opacity));
-}
-.text-purple-800 {
-	--tw-text-opacity: 1;
-	color: rgba(91, 33, 182, var(--tw-text-opacity));
 }
 .text-\[\#c086c5\] {
 	--tw-text-opacity: 1;
 	color: rgba(192, 134, 197, var(--tw-text-opacity));
 }
-.shadow-sm {
-	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-\[\#a7a7aa\] {
+	--tw-text-opacity: 1;
+	color: rgba(167, 167, 170, var(--tw-text-opacity));
 }
-.shadow-xl {
-	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-gray-400 {
+	--tw-text-opacity: 1;
+	color: rgba(156, 163, 175, var(--tw-text-opacity));
+}
+.text-purple-800 {
+	--tw-text-opacity: 1;
+	color: rgba(91, 33, 182, var(--tw-text-opacity));
+}
+.text-gray-500 {
+	--tw-text-opacity: 1;
+	color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+.opacity-25 {
+	opacity: 0.25;
 }
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-lg {
+	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
