--- a/public/views/navbar.ejs
+++ b/public/views/navbar.ejs
@@ -11,86 +11,24 @@
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 
-<body class="">
-  <div class="flex w-[100vw] h-[100vh]  p-1 ">
-    <div class="flex flex-col items-center w-16 min-w-[64px] pt-4 bg-purple-100 border rounded-lg shadow-md">
-      <i class="fas fa-bell text-lg  p-4 text-[#c086c5] border rounded-[300px] bg-purple-200"></i>
-      <i class="fas fa-user text-lg  p-4 text-[#a7a7aa] "></i>
+<body class="overflow-hidden">
+  
+    <div class="flex flex-col items-center w-16 min-w-[64px] pt-4 bg-gradient-to-b from-purple-200  to-purple-100 border rounded-lg shadow-md">
+      <i class="fas fa-bell text-lg  p-4 text-[#c086c5] border-2 shadow-md rounded-[300px] bg-purple-200"></i>
+      <i class="fas fa-user text-lg  p-4 text-[#a7a7aa]  "></i>
       <i class="fas fa-comments text-lg  p-4 text-[#a7a7aa] "></i>
       <i class="fas fa-user-friends text-lg  p-4 text-[#a7a7aa]"></i>
-      <i class="fas fa-cog  mt-[610px] text-lg  p-4 text-[#a7a7aa]"></i>
+      <i class="fas fa-cog  mt-[600px] text-lg  p-4 text-[#a7a7aa]"></i>
       <div class="relative">
-        <img src="asset/user1.png" class="  w-7 bg-purple-300 pl-[5px] pr-[5px] pt-[6px] pb-[6px] rounded-lg ">
+        <img src="asset/user0.png" class=" shadow-lg w-7 bg-purple-300 pl-[5px] pr-[5px] pt-[6px] pb-[6px] rounded-lg ">
         <div
           class="flex absolute top-[18px] left-[18px] items-center justify-center w-[12px] h-[12px] bg-white rounded-3xl">
           <div class=" w-[8px] h-[8px] bg-green-500 rounded-3xl"></div>
         </div>
       </div>
     </div>
-    <div class="p-3 ml-2 bg-gray-100 rounded-lg shadow-md w-[208px] min-w-[208px] border">
-      <p class="text-2xl border-b font-neoeb">개인톡</p>
-      <p class="pt-1 mb-1 text-sm text-gray-400 font-neosb">모든참가자</p>
-      <div class="flex items-center mb-2 bg-purple-100 rounded-lg">
-        <div class="relative mr-1">
-          <img src="asset/user1.png" class="  w-7 bg-purple-300 pl-[5px] pr-[5px] pt-[6px] pb-[6px] rounded-3xl">
-          <div
-            class="flex absolute top-[18px] left-[18px] items-center justify-center w-[12px] h-[12px] bg-white rounded-3xl">
-            <div class=" w-[8px] h-[8px] bg-green-500 rounded-3xl"></div>
-          </div>
-        </div>
-        <p class="text-sm text-purple-800 font-neom">고재범</p>
-        <p class="pl-2 pr-2 ml-1 text-xs bg-gray-100 rounded-lg font-neob">me</p>
-      </div>
 
-      <div class="flex items-center mb-2">
-        <div class="relative mr-1">
-          <img src="asset/user1.png" class="  w-7 bg-purple-300 pl-[5px] pr-[5px] pt-[6px] pb-[6px] rounded-3xl">
-          <div
-            class="flex absolute top-[18px] left-[18px] items-center justify-center w-[12px] h-[12px] bg-white rounded-3xl">
-            <div class=" w-[8px] h-[8px] bg-green-500 rounded-3xl"></div>
-          </div>
-        </div>
-        <p class="text-sm font-neom">고재범</p>
-
-      </div>
-      <div class="flex items-center mb-2">
-        <div class="relative mr-1">
-          <img src="asset/user1.png" class="  w-7 bg-purple-300 pl-[5px] pr-[5px] pt-[6px] pb-[6px] rounded-3xl">
-          <div
-            class="flex absolute top-[18px] left-[18px] items-center justify-center w-[12px] h-[12px] bg-white rounded-3xl">
-            <div class=" w-[8px] h-[8px] bg-green-500 rounded-3xl"></div>
-          </div>
-        </div>
-        <p class="text-sm font-neom">고재범</p>
-
-      </div>
-      <div class="flex items-center mb-2">
-        <div class="relative mr-1">
-          <img src="asset/user1.png" class="  w-7 bg-purple-300 pl-[5px] pr-[5px] pt-[6px] pb-[6px] rounded-3xl">
-          <div
-            class="flex absolute top-[18px] left-[18px] items-center justify-center w-[12px] h-[12px] bg-white rounded-3xl">
-            <div class=" w-[8px] h-[8px] bg-green-500 rounded-3xl"></div>
-          </div>
-        </div>
-        <p class="text-sm font-neom">고재범</p>
-
-      </div>
-      <div class="flex items-center mb-2">
-        <div class="relative mr-1">
-          <img src="asset/user1.png" class="  w-7 bg-purple-300 pl-[5px] pr-[5px] pt-[6px] pb-[6px] rounded-3xl">
-          <div
-            class="flex absolute top-[18px] left-[18px] items-center justify-center w-[12px] h-[12px] bg-white rounded-3xl">
-            <div class=" w-[8px] h-[8px] bg-green-500 rounded-3xl"></div>
-          </div>
-        </div>
-        <p class="text-sm font-neom">고재범</p>
-
-      </div>
-
-
-    </div>
-
-  </div>
+  
 
 </body>
 
